[package]
name = "makespan"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
edition = "2018"
description = "Minimum makespan scheduler"
repository = "https://github.com/matyama/makespan"
license = "MIT OR Apache-2.0"
keywords = ["scheduling", "makespan", "operations research"]
categories = ["algorithms", "science"]

[badges]
codecov = { repository = "matyama/makespan", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[lib]
name = "makespan"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"
ordered-float = "2.0"
rand = "0.7"
voracious_radix_sort = "1.1.0"
