[package]
name = "makespan"
version = "0.3.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
edition = "2021"
description = "Minimum makespan scheduler"
repository = "https://github.com/matyama/makespan"
license = "MIT OR Apache-2.0"
keywords = ["scheduling", "makespan", "operations research"]
categories = ["algorithms", "science"]

[badges]
#codecov = { repository = "matyama/makespan", branch = "main", service = "github" }
maintenance = { status = "experimental" }

[lib]
name = "makespan"
path = "src/lib.rs"

[dependencies]
daggy = "0.8"
fixedbitset = "0.4"
itertools = "0.10"
num-traits = "0.2"
ordered-float = "3.0"
rand = "0.8"

# TODO: criterion
[dev-dependencies]
rstest = "0.12"

